# sc3020

./: CMakeLists.txt  c
Project2/: explore.py  exploreResultsDetails.txt  test.dot
Project2/GUIs/: .env  pyqt_gui.py  tkinter_gui.py
Project2/scratches/: abc.ipynb  details.json  df_display.py  df_display_copy.py  explore.py  exploreResultsDetails.txt  requirements.txt  res.json  res.txt  results.json  results.txt  temp_scratches.py  test.dot  test.py  tt1.py
Project2/submission/: .env  annotated_explore.py  explore.py  interface.py  project.py  requirements.txt
SC3020 DB Project 1/: LRUCache  LRUCache.c  LRUCache.h  address.c  block  block.c  block.h  disk.c
SC3020 DB Project 1/SC3020 DB Project 1/: block.h  disk.c
SC3020 DB Project 1_Yupei'ver/: LRUCache.c  LRUCache.h  block.h  disk.c
dhruv/: BPlusNode.c  BPlusNode.h  BPlusTree.c  BPlusTree.h  bPlusTreeV2.c  main.c  test_main.c
merge_pheobe/: common.c  common.h  main  main.c  record.c
merge_pheobe/b+tree/: bt_mgr.c  bt_mgr.h  (+7 more)
new_new_storage/: address.c  common.c  common.h  disk.c  main.c  record.c
simple_version/: bt_mgr.c  bt_mgr.h  bt_node.c  bt_node.h  bt_page.c  bt_page.h  database.c  database.h  deleteTest.c  insertTest.c  insertoverflowTest.c  storage  storage.c  storage.h
storage/: LRUCache  LRUCache.c  LRUCache.h  address.c  block.c  block.h  count  disk.c  disk.h  main  main.c  record.c  unused codes.txt
storage_backup/: LRUCache.c  block.c  block.h  count.c  main  main.c
storage_newBackup/: common.c  common.h  database.c  database.h  disk.c  disk.h  insertoverflowTest.c  main  main.c
(+45 files in other folders)
